--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.3",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.17.4",
     "next": "14.0.4",
