--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.3",
+    "@vercel/speed-insights": "^1.0.9",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.17.4",
     "next": "14.0.4",
